# vic-council-candidates-scraper

./: LICENSE  README.md  keywords.py  pyproject.toml  scraper.py  scraper_mcc.py  utils.py
data/: MCC-councillors-2024-09-18 23:40:27.192432.csv  MCC-leadership-2024-09-18 23:40:27.191151.csv  candidates-2024-09-18 23:33:12.622331.csv  candidates-2024-09-20 20:54:01.744940.csv  keywords.csv
