[tool.poetry]
name = "vic-council-candidates-scraper"
version = "0.1.0"
description = ""
authors = ["Jonathan O'Brien <jonobri1@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.32.3"
bs4 = "^0.0.2"
nltk = "^3.9.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
